these_pasteur/exemples/DoEsteRML/test/good/domain5.strl
signal s in
  domain ck do
    present s then print "OK" else print "ERROR" end
    ||
    pause ck; print "OK"
  done
  ||
  emit s
end.