these_pasteur/exemples/DoEsteRML/test/bad/domain1.strl
signal s in
  domain ck do
    present s then print "ERROR" else print "ERROR" end
    ||
    pause ck; emit s
  done
end.